--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,6 +202,104 @@ header .menu-icon div {
   border-right: 20px solid transparent;
 }
 
+/* PRODUCTS */
+
+.products-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin: 40px 0;
+}
+
+.product-item {
+  display: block;
+  border-radius: 8px;
+  overflow: hidden;
+  text-decoration: none;
+  position: relative;
+}
+
+.product-item:hover {
+  opacity: 0.8;
+}
+
+
+.product-item .warning {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  background-color: #FE6A0F;
+  font-size: 16px;
+  font-weight: 500;
+  color: #FFF;
+  padding: 10px 15px;
+  border-radius: 4px;
+}
+
+.product-item .photo {
+  text-align: center;
+  background-color: #2b2b2b;
+  padding-top: 30px;
+}
+
+.product-item .photo .img {
+  max-width: 100%;
+}
+
+.product-item .info {
+  background-color: #1F1F1F;
+  padding: 60px 30px 30px 30px;
+  margin-top: -50px;
+}
+
+.product-item .product-category {
+  color: #FFF;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.product-item .product-name {
+  color: #FFF;
+  font-family: 'Calistoga';
+  font-size: 32px;
+  margin: 10px 0;
+}
+
+.product-item .product-price {
+  color: #FE6A0F;
+  font-size: 32px;
+  font-weight: bold;
+}
+
+/* FOOTER */
+
+footer {
+  background-color: #1F1F1F;
+}
+
+footer .container {
+  padding-top: 80px;
+  padding-bottom: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer .copyrights {
+  font-size: 24px;
+  color: #5f5f5f;
+}
+
+footer .copyrights a {
+  color: #5f5f5f;
+  text-decoration: none;
+}
+
+footer .copyrights a:hover {
+  text-decoration: underline;
+}
+
+
 @media (max-width: 820px) {
   header nav {
     display: none;
@@ -245,10 +343,22 @@ header .menu-icon div {
     flex-direction: column;
     gap: 20px;
   }
+
+  .products-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  footer .container {
+    flex-direction: column;
+    gap: 20px;
+  }
 }
 
-
-
+@media (max-width: 500px) {
+  .products-grid {
+    grid-template-columns: 1fr;
+  }
+}
 
 @media (max-width: 410px) {
   header .logo a {
